@@ -8,6 +8,7 @@ import ru.ac.checkpointmanager.dto.TerritoryDTO;
 import ru.ac.checkpointmanager.model.Territory;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Component
 @Slf4j
@@ -30,7 +31,8 @@ public class TerritoryMapper {
     public List<TerritoryDTO> toTerritoriesDTO(List<Territory> territories) {
         return territories.stream()
                 .map(e -> modelMapper.map(e, TerritoryDTO.class))
-                .toList();
+                .collect(Collectors.toList()); //if we will replace to Stream.toList() it will cause
+        // deserialization error in Redis
     }
 
     public List<Territory> toTerritories(List<TerritoryDTO> territoriesDTO) {
